JK-1202: cut Quarkus resolve thrash; keep locks under default heap
Root causes of multi-minute Quarkus locks were not “PubGrub needs 1.5 GiB”,
but solver thrash: invented soft-prefer pins below transitive floors, full
maven-metadata candidate lists, exclusion-keyed POM re-parses on backtrack,
and lifting io.quarkus.* past the BOM line.

- Drop retained managedDependencies on jar packaging (heap)
- Cache raw POM edges by pkg@version; filter exclusions per call
- Compact version candidates; preferBom no longer invents missing pins
- Compatible BOM pins → exact edges; pin io.quarkus.* to declared versions
- Forward JK_RESOLVE_* env into the engine process
- Quarkus scaffold: drop quarkus-junit5 from DEV (main graph thrash)

Warm unit lock for rest+arc ~0.5 s resolve; dogfood lock under 256 MiB heap.